--- a/src/exp/plotting.ipynb
+++ b/src/exp/plotting.ipynb
@@ -27,11 +27,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-03 12:04:04.875040: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n",
-      "2022-01-03 12:04:08.530854: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n",
-      "2022-01-03 12:04:08.626788: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n",
-      "/home/energy/amawi/miniconda3/lib/python3.8/site-packages/jax/experimental/optimizers.py:28: FutureWarning: jax.experimental.optimizers is deprecated, import jax.example_libraries.optimizers instead\n",
-      "  warnings.warn('jax.experimental.optimizers is deprecated, '\n"
+      "2022-01-21 14:03:44.027438: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.37-GCCcore-11.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-11.2.0/lib:/home/modules/software/GCCcore/11.2.0/lib64\n",
+      "2022-01-21 14:03:44.198542: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.37-GCCcore-11.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-11.2.0/lib:/home/modules/software/GCCcore/11.2.0/lib64\n",
+      "2022-01-21 14:03:44.205905: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.37-GCCcore-11.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-11.2.0/lib:/home/modules/software/GCCcore/11.2.0/lib64\n",
+      "2022-01-21 14:03:47.499838: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.37-GCCcore-11.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-11.2.0/lib:/home/modules/software/GCCcore/11.2.0/lib64\n"
      ]
     },
     {
@@ -57,8 +56,8 @@
     }
    ],
    "source": [
-    "from nn_ansatz import approximate_pair_distribution_function, load_pk\n",
-    "from nn_ansatz.python_helpers import find_all_files_in_dir\n",
+    "# from nn_ansatz import approximate_pair_distribution_function, load_pk\n",
+    "# from nn_ansatz.python_helpers import find_all_files_in_dir\n",
     "from nn_ansatz.plot import *\n",
     "import numpy as np\n",
     "from bokeh.io import output_notebook\n",
@@ -68,6 +67,223 @@
     "import itertools\n",
     "import pandas as pd\n",
     "pd.set_option(\"display.precision\", 8)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_6a1c3_\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"col_heading level0 col0\" >density_parameter</th>\n",
+       "      <th class=\"col_heading level0 col1\" >equilibrated_energy_mean</th>\n",
+       "      <th class=\"col_heading level0 col2\" >equilibrated_energy_sem</th>\n",
+       "      <th class=\"col_heading level0 col3\" >energy (Ry)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_6a1c3_row0_col0\" class=\"data row0 col0\" >2.00000000</td>\n",
+       "      <td id=\"T_6a1c3_row0_col1\" class=\"data row0 col1\" >0.11088294</td>\n",
+       "      <td id=\"T_6a1c3_row0_col2\" class=\"data row0 col2\" >0.00000621</td>\n",
+       "      <td id=\"T_6a1c3_row0_col3\" class=\"data row0 col3\" >0.22176588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_6a1c3_row1_col0\" class=\"data row1 col0\" >1.00000000</td>\n",
+       "      <td id=\"T_6a1c3_row1_col1\" class=\"data row1 col1\" >1.12038279</td>\n",
+       "      <td id=\"T_6a1c3_row1_col2\" class=\"data row1 col2\" >0.00001001</td>\n",
+       "      <td id=\"T_6a1c3_row1_col3\" class=\"data row1 col3\" >2.24076557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_6a1c3_row2_col0\" class=\"data row2 col0\" >10.00000000</td>\n",
+       "      <td id=\"T_6a1c3_row2_col1\" class=\"data row2 col1\" >-0.05311628</td>\n",
+       "      <td id=\"T_6a1c3_row2_col2\" class=\"data row2 col2\" >0.00000145</td>\n",
+       "      <td id=\"T_6a1c3_row2_col3\" class=\"data row2 col3\" >-0.10623256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_6a1c3_row3_col0\" class=\"data row3 col0\" >5.00000000</td>\n",
+       "      <td id=\"T_6a1c3_row3_col1\" class=\"data row3 col1\" >-0.06640016</td>\n",
+       "      <td id=\"T_6a1c3_row3_col2\" class=\"data row3 col2\" >0.00000223</td>\n",
+       "      <td id=\"T_6a1c3_row3_col3\" class=\"data row3 col3\" >-0.13280033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_6a1c3_row4_col0\" class=\"data row4 col0\" >20.00000000</td>\n",
+       "      <td id=\"T_6a1c3_row4_col1\" class=\"data row4 col1\" >-0.03220899</td>\n",
+       "      <td id=\"T_6a1c3_row4_col2\" class=\"data row4 col2\" >0.00000111</td>\n",
+       "      <td id=\"T_6a1c3_row4_col3\" class=\"data row4 col3\" >-0.06441799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_6a1c3_row5_col0\" class=\"data row5 col0\" >50.00000000</td>\n",
+       "      <td id=\"T_6a1c3_row5_col1\" class=\"data row5 col1\" >-0.01452184</td>\n",
+       "      <td id=\"T_6a1c3_row5_col2\" class=\"data row5 col2\" >0.00000065</td>\n",
+       "      <td id=\"T_6a1c3_row5_col3\" class=\"data row5 col3\" >-0.02904368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_6a1c3_row6_col0\" class=\"data row6 col0\" >100.00000000</td>\n",
+       "      <td id=\"T_6a1c3_row6_col1\" class=\"data row6 col1\" >-0.00733711</td>\n",
+       "      <td id=\"T_6a1c3_row6_col2\" class=\"data row6 col2\" >0.00000057</td>\n",
+       "      <td id=\"T_6a1c3_row6_col3\" class=\"data row6 col3\" >-0.01467421</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f69717eeca0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['density_parameter', 'equilibrated_energy_mean', 'equilibrated_energy_sem', 'energy (Ry)']].style.hide_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_a576f_\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"col_heading level0 col0\" >n_el</th>\n",
+       "      <th class=\"col_heading level0 col1\" >n_det</th>\n",
+       "      <th class=\"col_heading level0 col2\" >density_parameter</th>\n",
+       "      <th class=\"col_heading level0 col3\" >equilibrated_energy_mean</th>\n",
+       "      <th class=\"col_heading level0 col4\" >equilibrated_energy_sem</th>\n",
+       "      <th class=\"col_heading level0 col5\" >energy (Ry)</th>\n",
+       "      <th class=\"col_heading level0 col6\" >n_it_best_model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_a576f_row0_col0\" class=\"data row0 col0\" >19</td>\n",
+       "      <td id=\"T_a576f_row0_col1\" class=\"data row0 col1\" >1</td>\n",
+       "      <td id=\"T_a576f_row0_col2\" class=\"data row0 col2\" >1.00000000</td>\n",
+       "      <td id=\"T_a576f_row0_col3\" class=\"data row0 col3\" >1.04624796</td>\n",
+       "      <td id=\"T_a576f_row0_col4\" class=\"data row0 col4\" >0.00000425</td>\n",
+       "      <td id=\"T_a576f_row0_col5\" class=\"data row0 col5\" >2.09249592</td>\n",
+       "      <td id=\"T_a576f_row0_col6\" class=\"data row0 col6\" >50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_a576f_row1_col0\" class=\"data row1 col0\" >19</td>\n",
+       "      <td id=\"T_a576f_row1_col1\" class=\"data row1 col1\" >1</td>\n",
+       "      <td id=\"T_a576f_row1_col2\" class=\"data row1 col2\" >2.00000000</td>\n",
+       "      <td id=\"T_a576f_row1_col3\" class=\"data row1 col3\" >0.09630414</td>\n",
+       "      <td id=\"T_a576f_row1_col4\" class=\"data row1 col4\" >0.00000198</td>\n",
+       "      <td id=\"T_a576f_row1_col5\" class=\"data row1 col5\" >0.19260828</td>\n",
+       "      <td id=\"T_a576f_row1_col6\" class=\"data row1 col6\" >50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_a576f_row2_col0\" class=\"data row2 col0\" >19</td>\n",
+       "      <td id=\"T_a576f_row2_col1\" class=\"data row2 col1\" >1</td>\n",
+       "      <td id=\"T_a576f_row2_col2\" class=\"data row2 col2\" >5.00000000</td>\n",
+       "      <td id=\"T_a576f_row2_col3\" class=\"data row2 col3\" >-0.06725009</td>\n",
+       "      <td id=\"T_a576f_row2_col4\" class=\"data row2 col4\" >0.00000061</td>\n",
+       "      <td id=\"T_a576f_row2_col5\" class=\"data row2 col5\" >-0.13450018</td>\n",
+       "      <td id=\"T_a576f_row2_col6\" class=\"data row2 col6\" >90000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_a576f_row3_col0\" class=\"data row3 col0\" >19</td>\n",
+       "      <td id=\"T_a576f_row3_col1\" class=\"data row3 col1\" >1</td>\n",
+       "      <td id=\"T_a576f_row3_col2\" class=\"data row3 col2\" >10.00000000</td>\n",
+       "      <td id=\"T_a576f_row3_col3\" class=\"data row3 col3\" >-0.05285985</td>\n",
+       "      <td id=\"T_a576f_row3_col4\" class=\"data row3 col4\" >0.00000029</td>\n",
+       "      <td id=\"T_a576f_row3_col5\" class=\"data row3 col5\" >-0.10571971</td>\n",
+       "      <td id=\"T_a576f_row3_col6\" class=\"data row3 col6\" >60000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_a576f_row4_col0\" class=\"data row4 col0\" >19</td>\n",
+       "      <td id=\"T_a576f_row4_col1\" class=\"data row4 col1\" >1</td>\n",
+       "      <td id=\"T_a576f_row4_col2\" class=\"data row4 col2\" >20.00000000</td>\n",
+       "      <td id=\"T_a576f_row4_col3\" class=\"data row4 col3\" >-0.03201097</td>\n",
+       "      <td id=\"T_a576f_row4_col4\" class=\"data row4 col4\" >0.00000013</td>\n",
+       "      <td id=\"T_a576f_row4_col5\" class=\"data row4 col5\" >-0.06402193</td>\n",
+       "      <td id=\"T_a576f_row4_col6\" class=\"data row4 col6\" >90000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_a576f_row5_col0\" class=\"data row5 col0\" >19</td>\n",
+       "      <td id=\"T_a576f_row5_col1\" class=\"data row5 col1\" >1</td>\n",
+       "      <td id=\"T_a576f_row5_col2\" class=\"data row5 col2\" >50.00000000</td>\n",
+       "      <td id=\"T_a576f_row5_col3\" class=\"data row5 col3\" >-0.01456498</td>\n",
+       "      <td id=\"T_a576f_row5_col4\" class=\"data row5 col4\" >0.00000004</td>\n",
+       "      <td id=\"T_a576f_row5_col5\" class=\"data row5 col5\" >-0.02912996</td>\n",
+       "      <td id=\"T_a576f_row5_col6\" class=\"data row5 col6\" >90000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_a576f_row6_col0\" class=\"data row6 col0\" >19</td>\n",
+       "      <td id=\"T_a576f_row6_col1\" class=\"data row6 col1\" >1</td>\n",
+       "      <td id=\"T_a576f_row6_col2\" class=\"data row6 col2\" >100.00000000</td>\n",
+       "      <td id=\"T_a576f_row6_col3\" class=\"data row6 col3\" >-0.00771761</td>\n",
+       "      <td id=\"T_a576f_row6_col4\" class=\"data row6 col4\" >0.00000002</td>\n",
+       "      <td id=\"T_a576f_row6_col5\" class=\"data row6 col5\" >-0.01543522</td>\n",
+       "      <td id=\"T_a576f_row6_col6\" class=\"data row6 col6\" >90000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f4c8830ce20>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_el = 19\n",
+    "# name = '/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/final1001/%iel/baseline/8det' % n_el\n",
+    "name = '/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/final1001/%iel/baseline/kfac_1lr-3_1d-4_1nc-4_m2048_el19_s128_p32_l3_det1' % n_el\n",
+    "# name = '/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/final1001/7el/baseline/kfac_1lr-3_1d-4_1nc-4_m2048_el7_s128_p32_l3_det1'\n",
+    "x = 'density_parameter'\n",
+    "y = 'equilibrated_energy_mean'\n",
+    "yerr = 'equilibrated_energy_sem'\n",
+    "title = 'denisty parameter sweep'\n",
+    "group = True\n",
+    "\n",
+    "# data = get_data(name, groupby=x, dicts=[])\n",
+    "data = get_data(name, dicts=[])\n",
+    "\n",
+    "xs = data[x]\n",
+    "ys = data[y]\n",
+    "yerrs = data[yerr]\n",
+    "\n",
+    "# graph = plot_scatter(xs, \n",
+    "#                      ys, \n",
+    "#                      yerrs=yerrs,\n",
+    "#                      title=title) \n",
+    "# show(graph)\n",
+    "\n",
+    "# data = data.loc[data.groupby(by='density_parameter')['energy (Ry)'].idxmin()]\n",
+    "data[['n_el', 'n_det', x, y, yerr, 'energy (Ry)', 'n_it_best_model']].sort_values(by=['n_det', x]).style.hide_index()\n",
+    "\n",
+    "# data = data.rename(columns={\"density_parameter\":\"rs\"})\n",
+    "\n",
+    "# origin = '%iel_nnansatz.txt' % n_el\n",
+    "\n",
+    "# data.to_csv(origin, index=False)\n",
+    "# data = data.dropna()\n",
+    "# merge_cols = [['E^_\\mathrm{VMC} (Ry)', 'energy (Ry)', 'variance']]\n",
+    "\n",
+    "# create_error_cols(origin, merge_cols=merge_cols)\n",
+    "\n",
+    "# generate_latex_table(origin, '%iel_nnansatz_latex.txt' % n_el, keep_cols=[0, -1, -2])\n",
+    "# data = data[['rs', 'energy (Ry)', 'variance', 'n_it_best_model']].sort_values(by='rs')"
    ]
   },
   {
@@ -348,43 +564,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "value:  1.138316 error:  1.4e-05 new_value:  1.13831(1)\n",
-      "value:  1.137948 error:  1.9e-05 new_value:  1.13794(1)\n",
-      "value:  -0.0164079 error:  5.5e-06 new_value:  -0.016407(5)\n",
-      "value:  -0.016653 error:  1.1e-05 new_value:  -0.01665(1)\n",
-      "value:  -0.1595239 error:  1.9e-06 new_value:  -0.159523(1)\n",
-      "value:  -0.1596843 error:  3.8e-06 new_value:  -0.159684(3)\n",
-      "value:  -0.11032292 error:  7.8e-07 new_value:  -0.1103229(7)\n",
-      "value:  -0.1104355 error:  1.7e-06 new_value:  -0.110435(1)\n",
-      "value:  -0.06484443 error:  2e-07 new_value:  -0.0648444(2)\n",
-      "value:  -0.06491579 error:  5.9e-07 new_value:  -0.0649157(5)\n",
-      "value:  -0.02922805 error:  6e-08 new_value:  -0.02922805(5)\n",
-      "value:  -0.02925732 error:  2e-07 new_value:  -0.0292573(2)\n",
-      "value:  -0.01545485 error:  6e-08 new_value:  -0.01545485(5)\n",
-      "value:  -0.01546859 error:  6e-08 new_value:  -0.01546859(5)\n"
+      "0.5 10.95082(1)\n",
+      "0.5 10.95079(1)\n",
+      "1.0 2.092544(7)\n",
+      "1.0 2.092410(1)\n",
+      "2.0 0.192637(3)\n",
+      "2.0 0.192605(3)\n",
+      "5.0 -0.1344710(1)\n",
+      "5.0 -0.134508(1)\n",
+      "10.0 -0.10570810(6)\n",
+      "10.0 -0.1057304(6)\n",
+      "20.0 -0.06401910(2)\n",
+      "20.0 -0.0640333(2)\n",
+      "50.0 -0.02913147(5)\n",
+      "50.0 -0.02913839(8)\n",
+      "100.0 -0.01543798(2)\n",
+      "100.0 -0.01544285(2)\n"
      ]
     }
    ],
    "source": [
-    "target = '14el_benchmarks.txt'\n",
-    "origin = '14el_benchmarks_unfmt.txt'\n",
+    "n_el = 19\n",
+    "target = '%iel_benchmarks.txt'% n_el\n",
+    "origin = '%iel_benchmarks_unfmt.txt'% n_el\n",
     "saverio_2_csv(origin, target)\n",
     "\n",
-    "method = ('JS', 'BF', 'IB1', 'IB2')\n",
+    "method = ('JS', 'BF', 'IB1', 'IB2', 'IB3')\n",
     "\n",
     "merge_cols = [['E^_\\mathrm{VMC} (Ry)', 'E_VMC', 'err'],\n",
     "                ['E^_\\mathrm{DMC} (Ry)', 'E_DMC', 'err.1']]\n",
     "\n",
     "create_error_cols(target, merge_cols=merge_cols, method=method, method_column='wf')\n",
     "\n",
-    "generate_latex_table(target, '14el_benchmarks_latex.txt', keep_cols=[0, -1, -2])"
+    "generate_latex_table(target, '%iel_benchmarks_latex.txt' % n_el, keep_cols=[0, -1, -2])"
    ]
   },
   {
@@ -5572,7 +5791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
