--- a/src/debug.ipynb
+++ b/src/debug.ipynb
@@ -36,6 +36,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  , 0.  ],\n",
+       "       [0.  , 0.  , 0.05],\n",
+       "       [0.  , 0.  , 0.1 ],\n",
+       "       ...,\n",
+       "       [0.95, 0.95, 0.85],\n",
+       "       [0.95, 0.95, 0.9 ],\n",
+       "       [0.95, 0.95, 0.95]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as jnp\n",
+    "from itertools import product\n",
+    "\n",
+    "def generate_nd_hypercube(lims, n_points=20):\n",
+    "    points = [jnp.linspace(*lim, n_points, endpoint=False) for lim in lims]\n",
+    "    hypercube = jnp.array(list(product(*points)))\n",
+    "    return hypercube\n",
+    "\n",
+    "generate_nd_hypercube(((0, 1), (0, 1), (0, 1)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -416,11 +450,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c02ff6a36e3d46c1ead4b797cf1aafcc2fcdb1b8c513784bf1d611625458fd41"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit ('pansatz': conda)",
+   "display_name": "Python 3.10.6 ('dw')",
    "language": "python",
    "name": "python3"
   },
@@ -434,9 +465,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "609da2bec9d3b609cbbba0688ce15fc7ccd737922b46a2b0129602df83273cef"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
