--- a/src/model_debug.ipynb
+++ b/src/model_debug.ipynb
@@ -283,10 +283,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 ('gpu')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "34c7db6a7da60920da4aaab7329e5996335884ee75c5253d1bc3beaba59ca94f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
