--- a/src/debug.ipynb
+++ b/src/debug.ipynb
@@ -2,6 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "starred assignment target must be in a list or tuple (3821970079.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [6], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    *x = gen(1)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m starred assignment target must be in a list or tuple\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen(n):\n",
+    "    out = []\n",
+    "    for i in range(n):\n",
+    "        out += [i]\n",
+    "    return tuple(out)\n",
+    "        \n",
+    "x = gen(1)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -451,7 +483,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('dw')",
+   "display_name": "Python 3.10.4 ('gpu')",
    "language": "python",
    "name": "python3"
   },
@@ -465,12 +497,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "609da2bec9d3b609cbbba0688ce15fc7ccd737922b46a2b0129602df83273cef"
+    "hash": "34c7db6a7da60920da4aaab7329e5996335884ee75c5253d1bc3beaba59ca94f"
    }
   }
  },
